crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_div_tab_indent_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..23
  LIST@0..23
    LIST_ITEM@0..23
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 "\t"
      HTML_BLOCK_DIV@2..23
        HTML_BLOCK_TAG@2..8
          TEXT@2..6 "<div"
          TEXT@6..7 ">"
          NEWLINE@7..8 "\n"
        PARAGRAPH@8..15
          WHITESPACE@8..9 "\t"
          TEXT@9..14 "hello"
          NEWLINE@14..15 "\n"
        HTML_BLOCK_TAG@15..23
          WHITESPACE@15..16 "\t"
          TEXT@16..22 "</div>"
          NEWLINE@22..23 "\n"
