crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_html_section_multiline_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..33
  LIST@0..33
    LIST_ITEM@0..33
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..20
        INLINE_HTML@2..11
          INLINE_HTML_CONTENT@2..11 "<section>"
        NEWLINE@11..12 "\n"
        TEXT@12..19 "  hello"
        NEWLINE@19..20 "\n"
      HTML_BLOCK@20..33
        HTML_BLOCK_TAG@20..33
          TEXT@20..32 "  </section>"
          NEWLINE@32..33 "\n"
