crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_mmd_link_attributes.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..173
  PARAGRAPH@0..65
    TEXT@0..20 "This is a reference "
    UNRESOLVED_REFERENCE@20..33
      IMAGE_LINK_START@20..22
        IMAGE_LINK_START@20..22 "!["
      IMAGE_ALT@22..27
        TEXT@22..27 "image"
      TEXT@27..28 "]"
      TEXT@28..29 "["
      LINK_REF@29..32
        TEXT@29..32 "ref"
      TEXT@32..33 "]"
    TEXT@33..64 " with MultiMarkdown a ..."
    NEWLINE@64..65 "\n"
  BLANK_LINE@65..66
    BLANK_LINE@65..66 "\n"
  REFERENCE_DEFINITION@66..173
    LINK@66..71
      LINK_START@66..67
        LINK_START@66..67 "["
      LINK_TEXT@67..70
        TEXT@67..70 "ref"
      TEXT@70..71 "]"
    TEXT@71..72 ":"
    WHITESPACE@72..73 " "
    REFERENCE_URL@73..94
      TEXT@73..94 "https://path.to/image"
    WHITESPACE@94..95 " "
    REFERENCE_TITLE@95..108
      TEXT@95..108 "\"Image title\""
    TEXT@108..131 " width=20px height=30px"
    NEWLINE@131..132 "\n"
    TEXT@132..172 "       id=myId class= ..."
    NEWLINE@172..173 "\n"
