crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_native_span_html_attrs_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..60
  PARAGRAPH@0..60
    TEXT@0..2 "A "
    BRACKETED_SPAN@2..51
      SPAN_BRACKET_OPEN@2..7 "<span"
      WHITESPACE@7..8 " "
      SPAN_ATTRIBUTES@8..37
        TEXT@8..12 "id=\""
        ATTR_ID@12..13 "x"
        TEXT@13..14 "\""
        WHITESPACE@14..15 " "
        TEXT@15..22 "class=\""
        ATTR_CLASS@22..23 "c"
        WHITESPACE@23..24 " "
        ATTR_CLASS@24..25 "k"
        TEXT@25..26 "\""
        WHITESPACE@26..27 " "
        ATTR_KEY_VALUE@27..37
          ATTR_KEY@27..33 "data-n"
          TEXT@33..34 "="
          ATTR_VALUE@34..37 "'1'"
      SPAN_BRACKET_OPEN@37..38 ">"
      SPAN_CONTENT@38..44
        TEXT@38..44 "tagged"
      SPAN_BRACKET_CLOSE@44..51 "</span>"
    TEXT@51..59 " region."
    NEWLINE@59..60 "\n"
