crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_reference_definition_attached_title_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..25
  REFERENCE_DEFINITION@0..18
    LINK@0..5
      LINK_START@0..1
        LINK_START@0..1 "["
      LINK_TEXT@1..4
        TEXT@1..4 "foo"
      TEXT@4..5 "]"
    TEXT@5..6 ":"
    WHITESPACE@6..7 " "
    REFERENCE_URL@7..12
      LINK_DEST_START@7..8 "<"
      TEXT@8..11 "bar"
      LINK_DEST_END@11..12 ">"
    REFERENCE_TITLE@12..17
      TEXT@12..17 "(baz)"
    NEWLINE@17..18 "\n"
  BLANK_LINE@18..19
    BLANK_LINE@18..19 "\n"
  PARAGRAPH@19..25
    LINK@19..24
      LINK_START@19..20
        LINK_START@19..20 "["
      LINK_TEXT@20..23
        TEXT@20..23 "foo"
      TEXT@23..24 "]"
    NEWLINE@24..25 "\n"
