crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_reference_definition_label_with_escaped_bracket.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..56
  REFERENCE_DEFINITION@0..43
    LINK@0..11
      LINK_START@0..1
        LINK_START@0..1 "["
      LINK_TEXT@1..10
        TEXT@1..10 "Foo*bar\\]"
      TEXT@10..11 "]"
    TEXT@11..12 ":"
    REFERENCE_URL@12..20
      TEXT@12..20 "my_(url)"
    WHITESPACE@20..21 " "
    REFERENCE_TITLE@21..42
      TEXT@21..42 "'title (with parens)'"
    NEWLINE@42..43 "\n"
  BLANK_LINE@43..44
    BLANK_LINE@43..44 "\n"
  PARAGRAPH@44..56
    LINK@44..55
      LINK_START@44..45
        LINK_START@44..45 "["
      LINK_TEXT@45..54
        TEXT@45..52 "Foo*bar"
        ESCAPED_CHAR@52..54 "\\]"
      TEXT@54..55 "]"
    NEWLINE@55..56 "\n"
